@@ -1,3 +1,8 @@
+2011-05-16  Doug Evans  <dje@google.com>
+
+	* python/py-auto-load.c (source_section_scripts): Mention objfile
+	name in warning.
+
 2011-05-15  Doug Evans  <dje@google.com>
 
 	* linux-thread-db.c (try_thread_db_load_from_pdir_1): New function.
